------------------------------------------------------------
"o": new feature
"*": bug fixed
"!": change that can break compatibility with older version
------------------------------------------------------------

version: 1.2.3, ???
==========================
o split package thread enabled or not(jingoo.cm[x]a, jingoo.threads.cm[x]a).


version: 1.2.2, 2013-11-02
==========================
* remove some needless funcs.
* fix bug about implicit file path.
* fix bug about jg_default(order of argument invalid).

version: 1.2.1, 2012-08-25
==========================
o disable auto convert from Tobj to Thash.

version: 1.2.0, 2012-08-24
==========================
* fix trouble of duplicated funcs between std_func and std_test(upper, lower).
o changed variable table from assoc list to Hashtbl for performance reason.
o add new type Thash for faster object.
  now template models(Tobj) are automatically converted into Thash.

version: 1.1.0, 2012-06-06
==========================
o license changed. now under MIT license.
o new cmdline tool option "-interp".
o support eval syntax(see cheatsheet.tmpl).

version: 1.0.1, 2012-03-13:
==========================
o add new syntax "rawinclude"

version: 1.0.0,  2012-02-18:
==========================
o first release